[gd_scene load_steps=23 format=3 uid="uid://cqu5woxnudbp2"]

[ext_resource type="Script" path="res://scenes/ui/logic_puzzle/logic_puzzle_ui.gd" id="1_jmtvp"]
[ext_resource type="Texture2D" uid="uid://ddqvmmqoggsju" path="res://graphics/objects/logic/xButton.png" id="1_wbctl"]
[ext_resource type="Texture2D" uid="uid://dwgvuf4yicddg" path="res://graphics/objects/logic/yButton.png" id="2_lm0rg"]
[ext_resource type="Texture2D" uid="uid://cmms0h7o4c8fr" path="res://graphics/objects/logic/zButton.png" id="3_2n3td"]
[ext_resource type="Texture2D" uid="uid://drwopbnkpvgd6" path="res://graphics/objects/logic/fil1.png" id="6_exfbq"]
[ext_resource type="Texture2D" uid="uid://1jwl73xo2c64" path="res://graphics/objects/logic/off.png" id="7_ort03"]
[ext_resource type="Texture2D" uid="uid://5euypo3onwoo" path="res://graphics/objects/logic/shadow.png" id="8_dm6s1"]
[ext_resource type="Texture2D" uid="uid://drh183dlp3jpi" path="res://graphics/objects/logic/closedLight.png" id="8_lox5t"]
[ext_resource type="Texture2D" uid="uid://c2h4iv6hhn80b" path="res://graphics/objects/logic/x_button.png" id="9_5ackg"]
[ext_resource type="PackedScene" uid="uid://c878nyeo2d6eq" path="res://scenes/objects/gates/empty_gate.tscn" id="11_k4e6k"]
[ext_resource type="Texture2D" uid="uid://dhxo3kx42i2tu" path="res://graphics/objects/logic/and2-.png" id="19_vyvhh"]
[ext_resource type="PackedScene" uid="uid://dj0jlav68i85r" path="res://scenes/objects/gates/x_or_gate.tscn" id="20_1y0ce"]
[ext_resource type="PackedScene" uid="uid://cbtlimh2jioec" path="res://scenes/objects/gates/not_gate.tscn" id="20_a13bc"]
[ext_resource type="PackedScene" uid="uid://de78v6my3130r" path="res://scenes/objects/gates/nor_gate.tscn" id="20_b6r2t"]
[ext_resource type="Texture2D" uid="uid://chsu34ua4m7oh" path="res://graphics/objects/logic/xor3.png" id="21_2ubiq"]
[ext_resource type="PackedScene" uid="uid://bfx4a6hlhfsiv" path="res://scenes/objects/gates/or_gate.tscn" id="21_h0110"]
[ext_resource type="Texture2D" uid="uid://c0d2p877ow26t" path="res://graphics/objects/logic/equation2 (1).png" id="22_xei6b"]
[ext_resource type="PackedScene" uid="uid://brv84hypgmntx" path="res://scenes/objects/gates/nand_gate_2.tscn" id="23_d1mcb"]
[ext_resource type="Texture2D" uid="uid://bvi1k7t0j4sb0" path="res://graphics/objects/logic/or2.png" id="23_nlvoq"]
[ext_resource type="PackedScene" uid="uid://crqjslcolsdjk" path="res://scenes/objects/gates/x_nor_gate.tscn" id="23_yaakh"]
[ext_resource type="Texture2D" uid="uid://bdlikqh72s230" path="res://graphics/objects/logic/nand2.png" id="24_hymyv"]
[ext_resource type="PackedScene" uid="uid://co2m3g3e37a8l" path="res://scenes/objects/gates/and_gate.tscn" id="24_pnh5l"]

[node name="logic_circuit_ui" type="CanvasLayer"]
script = ExtResource("1_jmtvp")

[node name="PanelWindow" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1153.0
offset_bottom = 650.0
scale = Vector2(1.6, 1.6)

[node name="ColorRect" type="ColorRect" parent="PanelWindow"]
modulate = Color(0.254902, 0.254902, 0.254902, 1)
layout_mode = 0
offset_right = 1216.0
offset_bottom = 674.0

[node name="x" type="Sprite2D" parent="PanelWindow"]
texture_filter = 1
position = Vector2(200, 129.75)
scale = Vector2(2.65972, 4.55882)
texture = ExtResource("1_wbctl")

[node name="y" type="Sprite2D" parent="PanelWindow"]
texture_filter = 1
position = Vector2(200, 314.563)
scale = Vector2(3.05093, 4.88971)
texture = ExtResource("2_lm0rg")

[node name="z" type="Sprite2D" parent="PanelWindow"]
texture_filter = 1
position = Vector2(200, 520.219)
scale = Vector2(2.99768, 4.49632)
texture = ExtResource("3_2n3td")

[node name="fil14" type="Sprite2D" parent="PanelWindow"]
position = Vector2(390, 132)
scale = Vector2(1.28125, 4.17188)
texture = ExtResource("6_exfbq")

[node name="fil15" type="Sprite2D" parent="PanelWindow"]
position = Vector2(394.22, 230.221)
rotation = 1.5708
scale = Vector2(7.85923, 3.73624)
texture = ExtResource("6_exfbq")

[node name="fil25" type="Sprite2D" parent="PanelWindow"]
position = Vector2(340.001, 457.367)
scale = Vector2(6.03125, 4.48437)
texture = ExtResource("6_exfbq")

[node name="notShadow" type="Sprite2D" parent="PanelWindow"]
visible = false
texture_filter = 1
position = Vector2(334, 129)
scale = Vector2(4.14352, 4.66912)
texture = ExtResource("8_dm6s1")

[node name="buttonX" type="TextureButton" parent="PanelWindow"]
texture_filter = 1
layout_mode = 0
offset_left = 196.0
offset_top = 95.0
offset_right = 223.0
offset_bottom = 112.0
scale = Vector2(2.94444, 4.08824)
texture_normal = ExtResource("7_ort03")

[node name="andShadow" type="Sprite2D" parent="PanelWindow"]
visible = false
texture_filter = 1
position = Vector2(422, 444)
scale = Vector2(4.94676, 5.52941)
texture = ExtResource("8_dm6s1")

[node name="fil16" type="Sprite2D" parent="PanelWindow"]
position = Vector2(439.5, 280.75)
scale = Vector2(3.46875, 3.64063)
texture = ExtResource("6_exfbq")

[node name="fil2" type="Sprite2D" parent="PanelWindow"]
position = Vector2(459.25, 139.375)
scale = Vector2(3.51563, 4.41406)
texture = ExtResource("6_exfbq")

[node name="fil4" type="Sprite2D" parent="PanelWindow"]
position = Vector2(367, 316)
scale = Vector2(8.06249, 4.28125)
texture = ExtResource("6_exfbq")

[node name="fil5" type="Sprite2D" parent="PanelWindow"]
position = Vector2(413, 259.633)
rotation = 1.5708
scale = Vector2(9.39461, 4.28125)
texture = ExtResource("6_exfbq")

[node name="fil3" type="Sprite2D" parent="PanelWindow"]
position = Vector2(596, 277)
scale = Vector2(4.375, 4.3125)
texture = ExtResource("6_exfbq")

[node name="fil19" type="Sprite2D" parent="PanelWindow"]
position = Vector2(411, 309)
scale = Vector2(8.31249, 4.125)
texture = ExtResource("6_exfbq")

[node name="fil21" type="Sprite2D" parent="PanelWindow"]
position = Vector2(559.344, 294)
scale = Vector2(1.52149, 3.8125)
texture = ExtResource("6_exfbq")

[node name="norShadow" type="Sprite2D" parent="PanelWindow"]
visible = false
texture_filter = 1
position = Vector2(498, 296)
scale = Vector2(4.58333, 5.10294)
texture = ExtResource("8_dm6s1")

[node name="fil6" type="Sprite2D" parent="PanelWindow"]
position = Vector2(573, 140.25)
scale = Vector2(1.59375, 4.60937)
texture = ExtResource("6_exfbq")

[node name="fil7" type="Sprite2D" parent="PanelWindow"]
position = Vector2(580, 252.531)
rotation = 1.5708
scale = Vector2(8.78578, 4.3125)
texture = ExtResource("6_exfbq")

[node name="notShadow2" type="Sprite2D" parent="PanelWindow"]
visible = false
texture_filter = 1
position = Vector2(513, 130)
scale = Vector2(4.41203, 4.79596)
texture = ExtResource("8_dm6s1")

[node name="fil8" type="Sprite2D" parent="PanelWindow"]
position = Vector2(606.063, 305)
scale = Vector2(1.99609, 4.30078)
texture = ExtResource("6_exfbq")

[node name="fil9" type="Sprite2D" parent="PanelWindow"]
position = Vector2(728, 291.375)
scale = Vector2(2.4375, 4.10156)
texture = ExtResource("6_exfbq")

[node name="fil10" type="Sprite2D" parent="PanelWindow"]
position = Vector2(739, 324.48)
rotation = 1.5708
scale = Vector2(2.75796, 4.31123)
texture = ExtResource("6_exfbq")

[node name="xnorShadow" type="Sprite2D" parent="PanelWindow"]
visible = false
texture_filter = 1
position = Vector2(664, 300)
scale = Vector2(5.17593, 5.20588)
texture = ExtResource("8_dm6s1")

[node name="fil12" type="Sprite2D" parent="PanelWindow"]
position = Vector2(730, 428)
scale = Vector2(2.5625, 3.5)
texture = ExtResource("6_exfbq")

[node name="fil13" type="Sprite2D" parent="PanelWindow"]
position = Vector2(742, 406.81)
rotation = 1.5708
scale = Vector2(3.06021, 3.17475)
texture = ExtResource("6_exfbq")

[node name="fil23" type="Sprite2D" parent="PanelWindow"]
position = Vector2(601.125, 414.25)
scale = Vector2(2.61719, 3.60937)
texture = ExtResource("6_exfbq")

[node name="xorShadow" type="Sprite2D" parent="PanelWindow"]
visible = false
texture_filter = 1
position = Vector2(663, 432)
scale = Vector2(4.97454, 5.48162)
texture = ExtResource("8_dm6s1")

[node name="fil11" type="Sprite2D" parent="PanelWindow"]
position = Vector2(780.5, 340)
scale = Vector2(3.09375, 3.78125)
texture = ExtResource("6_exfbq")

[node name="fil" type="Sprite2D" parent="PanelWindow"]
position = Vector2(781.625, 369.375)
scale = Vector2(2.89844, 3.66406)
texture = ExtResource("6_exfbq")

[node name="orShadow" type="Sprite2D" parent="PanelWindow"]
visible = false
texture_filter = 1
position = Vector2(839, 350)
scale = Vector2(4.75, 5.30882)
texture = ExtResource("8_dm6s1")

[node name="buttonY" type="TextureButton" parent="PanelWindow"]
texture_filter = 1
layout_mode = 0
offset_left = 198.0
offset_top = 280.0
offset_right = 225.0
offset_bottom = 297.0
scale = Vector2(3.06481, 4)
texture_normal = ExtResource("7_ort03")

[node name="fil1" type="Sprite2D" parent="PanelWindow"]
texture_filter = 1
position = Vector2(283.5, 132)
scale = Vector2(2.09375, 4.08824)
texture = ExtResource("6_exfbq")

[node name="buttonZ" type="TextureButton" parent="PanelWindow"]
texture_filter = 1
layout_mode = 0
offset_left = 197.0
offset_top = 484.0
offset_right = 224.0
offset_bottom = 501.0
scale = Vector2(2.98147, 3.95588)
texture_normal = ExtResource("7_ort03")

[node name="fil17" type="Sprite2D" parent="PanelWindow"]
texture_filter = 1
position = Vector2(287.25, 520)
scale = Vector2(2.67188, 4.1875)
texture = ExtResource("6_exfbq")

[node name="fil18" type="Sprite2D" parent="PanelWindow"]
texture_filter = 1
position = Vector2(303.15, 453.14)
rotation = 1.5708
scale = Vector2(11.1044, 4.10311)
texture = ExtResource("6_exfbq")

[node name="fil20" type="Sprite2D" parent="PanelWindow"]
texture_filter = 1
position = Vector2(565, 443)
scale = Vector2(8.875, 4.40625)
texture = ExtResource("6_exfbq")

[node name="fil22" type="Sprite2D" parent="PanelWindow"]
texture_filter = 1
position = Vector2(567, 373.11)
rotation = 1.5708
scale = Vector2(6.37341, 3.75)
texture = ExtResource("6_exfbq")

[node name="fil24" type="Sprite2D" parent="PanelWindow"]
texture_filter = 1
position = Vector2(259, 498.233)
rotation = 1.5708
scale = Vector2(3.52767, 3.6875)
texture = ExtResource("6_exfbq")

[node name="fil26" type="Sprite2D" parent="PanelWindow"]
texture_filter = 1
position = Vector2(262, 390.694)
rotation = 1.5708
scale = Vector2(6.02669, 3.6875)
texture = ExtResource("6_exfbq")

[node name="fil27" type="Sprite2D" parent="PanelWindow"]
texture_filter = 1
position = Vector2(339.5, 429)
scale = Vector2(5.96875, 4.40625)
texture = ExtResource("6_exfbq")

[node name="closedLight" type="Sprite2D" parent="PanelWindow"]
texture_filter = 1
position = Vector2(954, 306)
scale = Vector2(5.25, 4.5)
texture = ExtResource("8_lox5t")

[node name="Sprite2D" type="Sprite2D" parent="PanelWindow"]
texture_filter = 1
position = Vector2(915, 355)
scale = Vector2(3, 4.34375)
texture = ExtResource("6_exfbq")

[node name="closeButton" type="TextureButton" parent="PanelWindow"]
layout_mode = 0
offset_left = 1133.56
offset_right = 1197.56
offset_bottom = 64.0
texture_normal = ExtResource("9_5ackg")
stretch_mode = 0

[node name="etText" type="Label" parent="PanelWindow"]
layout_mode = 0
offset_left = 46.0
offset_top = 29.0
offset_right = 82.0
offset_bottom = 68.0
text = "ET"

[node name="nonText" type="Label" parent="PanelWindow"]
layout_mode = 0
offset_left = 30.0
offset_top = 112.0
offset_right = 84.0
offset_bottom = 148.0
text = "NON"

[node name="nonEtText" type="Label" parent="PanelWindow"]
layout_mode = 0
offset_left = 13.0
offset_top = 196.0
offset_right = 83.0
offset_bottom = 238.0
text = "NON-ET"

[node name="nonOuText" type="Label" parent="PanelWindow"]
layout_mode = 0
offset_left = 15.0
offset_top = 293.0
offset_right = 92.0
offset_bottom = 332.0
text = "NON-OU"

[node name="ouText" type="Label" parent="PanelWindow"]
layout_mode = 0
offset_left = 56.0
offset_top = 384.0
offset_right = 97.0
offset_bottom = 420.0
text = "OU"

[node name="comparateurText" type="Label" parent="PanelWindow"]
layout_mode = 0
offset_left = 17.0
offset_top = 466.0
offset_right = 96.0
offset_bottom = 528.0
text = "COMPA-
RATEUR"

[node name="ouEXText" type="Label" parent="PanelWindow"]
layout_mode = 0
offset_left = 16.0
offset_top = 560.0
offset_right = 88.0
offset_bottom = 625.0
text = "OU 
EXCLUSIF"

[node name="AndGate" parent="PanelWindow" instance=ExtResource("24_pnh5l")]
layout_mode = 0
offset_left = 82.0
offset_top = 12.0
offset_right = 162.0
offset_bottom = 92.0
texture = ExtResource("19_vyvhh")

[node name="XOrGate" parent="PanelWindow" instance=ExtResource("20_1y0ce")]
layout_mode = 0
offset_left = 91.0
offset_top = 552.0
offset_right = 171.0
offset_bottom = 632.0
texture = ExtResource("21_2ubiq")

[node name="OrGate" parent="PanelWindow" instance=ExtResource("21_h0110")]
layout_mode = 0
offset_left = 91.0
offset_top = 361.0
offset_right = 171.0
offset_bottom = 441.0
texture = ExtResource("23_nlvoq")

[node name="NorGate" parent="PanelWindow" instance=ExtResource("20_b6r2t")]
layout_mode = 0
offset_left = 88.0
offset_top = 270.0
offset_right = 168.0
offset_bottom = 350.0

[node name="XNorGate" parent="PanelWindow" instance=ExtResource("23_yaakh")]
layout_mode = 0
offset_left = 91.0
offset_top = 457.0
offset_right = 171.0
offset_bottom = 537.0

[node name="NandGate2" parent="PanelWindow" instance=ExtResource("23_d1mcb")]
layout_mode = 0
offset_left = 83.0
offset_top = 180.0
offset_right = 163.0
offset_bottom = 260.0
texture = ExtResource("24_hymyv")

[node name="NotGate" parent="PanelWindow" instance=ExtResource("20_a13bc")]
layout_mode = 0
offset_left = 82.0
offset_top = 95.0
offset_right = 162.0
offset_bottom = 175.0

[node name="EmptyGateNot2" parent="PanelWindow" instance=ExtResource("11_k4e6k")]
layout_mode = 0
offset_left = 477.0
offset_top = 97.0
offset_right = 561.0
offset_bottom = 177.0

[node name="EmptyGateNor" parent="PanelWindow" instance=ExtResource("11_k4e6k")]
layout_mode = 0
offset_left = 459.0
offset_top = 252.0
offset_right = 543.0
offset_bottom = 332.0

[node name="EmptyGateNot" parent="PanelWindow" instance=ExtResource("11_k4e6k")]
layout_mode = 0
offset_left = 295.0
offset_top = 90.0
offset_right = 379.0
offset_bottom = 170.0

[node name="EmptyGateAnd" parent="PanelWindow" instance=ExtResource("11_k4e6k")]
layout_mode = 0
offset_left = 374.0
offset_top = 401.0
offset_right = 454.0
offset_bottom = 481.0

[node name="EmptyGateXNor" parent="PanelWindow" instance=ExtResource("11_k4e6k")]
layout_mode = 0
offset_left = 617.0
offset_top = 249.0
offset_right = 697.0
offset_bottom = 329.0

[node name="EmptyGateOr" parent="PanelWindow" instance=ExtResource("11_k4e6k")]
layout_mode = 0
offset_left = 797.0
offset_top = 313.0
offset_right = 877.0
offset_bottom = 393.0

[node name="EmptyGateXOr" parent="PanelWindow" instance=ExtResource("11_k4e6k")]
layout_mode = 0
offset_left = 617.0
offset_top = 386.0
offset_right = 697.0
offset_bottom = 466.0

[node name="equation" type="Sprite2D" parent="PanelWindow"]
position = Vector2(599, 37)
scale = Vector2(1.904, 2.06071)
texture = ExtResource("22_xei6b")

[connection signal="pressed" from="PanelWindow/buttonX" to="." method="_on_button_x_pressed"]
[connection signal="pressed" from="PanelWindow/buttonY" to="." method="_on_button_y_pressed"]
[connection signal="pressed" from="PanelWindow/buttonZ" to="." method="_on_button_z_pressed"]
[connection signal="pressed" from="PanelWindow/closeButton" to="." method="_on_close_button_pressed"]
